Add and crop profile photo, update home and about pages

--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: "Welcome to My Product Management Portfolio"
 
 ::: {.hero-banner .text-center}
 
-<img src="images/profile.jpg" alt="add photo to /images" class="rounded-circle mb-3" width="160">
+<img src="images/profile.jpg" alt="Tyler Jones" class="rounded-circle mb-3" width="160">
 
 <h1>Tyler Jones</h1>
 
