--- a/about.qmd
+++ b/about.qmd
@@ -8,7 +8,7 @@ title: "About Me"
 
 <h1>Tyler Jones</h1>
 
-<a href="https://linkedin.com/in/tyjones7" class="btn btn-outline-primary btn-sm" target="_blank">
+<a href="https://www.linkedin.com/in/tylermichaeljones/" class="btn btn-outline-primary btn-sm" target="_blank">
   <i class="fab fa-linkedin"></i> LinkedIn
 </a>
 <a href="https://github.com/tyjones7" class="btn btn-outline-primary btn-sm" target="_blank">
